--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,12 @@
         <a class="nav-link" routerLink="" routerLinkActive="active">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
+          <a class="nav-link" routerLink="articles" routerLinkActive="active">Articles</a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link" routerLink="products" routerLinkActive="active">Products</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" routerLink="about" routerLinkActive="active">About Us</a>
       </li>
       <li class="nav-item">
@@ -22,6 +28,6 @@
   </div>
 </nav>
 
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
+<div class="container" [@routeAnimation]="getAnimationData(routerOutlet)">
+    <router-outlet #routerOutlet="outlet"></router-outlet>
+  </div>
